# BikeSight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  data_loader.py  data_migration.py  database_manager.py  database_schema.sql  docker-compose.yml  metrics.py  migration_page.py  pyproject.toml  replit.md  requirements.txt  utils.py  visualization.py
app/: __init__.py  dashboard.py  visualization.py
attached_assets/: Pasted--data-en-feeds-name-gbfs-url-https-gbfs-lyft-com-gbfs-2-3-bay-gbfs-json--1756171928314_1756171928317.txt  content-1756171946464.md
bikesight/: __init__.py  datasets.py
docs/: architecture.md  ingestion.md  operations.md  schema.sql
etl/: ingest.py
scripts/: ingest_month.sh
